# voxel2stl

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE
python/: CMakeLists.txt  __init__.py
src/: CMakeLists.txt  energy.hpp  geometry.cpp  geometry.hpp  linalg.hpp  python_voxel2stl.cpp  smoother.cpp  smoother.hpp  test_geometry.hpp  voxel2stl.hpp  voxeldata.cpp  voxeldata.hpp
tests/: CMakeLists.txt  test_small.py  test_voxelstl.py
